@@ -22,6 +22,7 @@
 #define ECPG_FLOAT_FORMAT	-206
 #define ECPG_CONVERT_BOOL	-207
 #define ECPG_EMPTY		-208
+#define ECPG_MISSING_INDICATOR	-209
 
 #define ECPG_NO_CONN		-220
 #define ECPG_NOT_CONN		-221
